Fixed spacing!!!!!!!!!!

--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -35,6 +35,7 @@ body {
     margin-right: 1.5vw;
   }
 
+  flex-basis: 0;
   flex-shrink: 1;
   position: relative;
   float: left;
